[package]
name = "cfil"
version = "0.1.0"
edition = "2021"
authors = ["Adrien PELFRESNE adrien.pelfresne@edu.esiee.fr"]
description = "A library to handle console input for codeforces problemsfor"
homepage = "https://github.com/dirdr/cfil"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
